--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Home") %>
 
 <p>
-    This is a <%= yield(:title) %> page paragraph
+    This is a <%= yield(:title) %> page paragraph.
 </p>
